[package]
name = "repoctx"
version = "1.0.0"
edition = "2024"
description = "Local-first repository context digestor"
license = "MIT"
repository = "https://github.com/EmagjbyLabs/ctx"

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.26"
